# ShMemIPC

./: CMakeLists.txt  GenerateProject.bat  GenerateProject.sh  README.md
ShMemClient/: CMakeLists.txt
ShMemClient/include/: ShMemClient.h
ShMemClient/src/: ClientTest.cpp  ShMemClient.cpp
ShMemServer/: CMakeLists.txt
ShMemServer/include/: ShMemServer.h
ShMemServer/src/: ServerLauncher.cpp  ShMemServer.cpp
ShMemUtils/: CMakeLists.txt
ShMemUtils/include/: ShMemUtils.h
ShMemUtils/src/: ShMemUtils.cpp
